# ai-assistant

./: .alias  .gitignore  .pre-commit.yaml  Cargo.toml
.github/workflows/: rust.yml
docker/: Dockerfile
src/: assistant.rs  compile.rs  config.rs  main.rs  openai_api.rs  response_content.rs  rest-api.rs  scenario.rs  yaml_config.rs
tests/: test.yaml  yaml_usage.rs
