[package]
name = "concept-extractor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
azure_ai = []

[dependencies]

async-openai = {version = "0.17"}
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tokio = { version = "1.35", features=["fs", "process"]}
#rocket = { version = "0.5", features=["json"]}

#iced = { version = "0.10", features = ["debug", "image", "tokio"]}
iced = {git = "https://github.com/ywata/iced", features = ["debug", "image", "tokio"]}
reqwest = { version = "0.11", features = ["json"]}
rand = {version = "0.8"}
winit = { git = "https://github.com/iced-rs/winit.git", rev = "c52db2045d0a2f1b8d9923870de1d4ab1994146e", default-features = false }


rfd = "0.12"

log = "0.4"
env_logger = "0.11"

[lib]
name = "openai_api"
path = "src/openai_api.rs"

[[bin]]
name = "assistant"
path = "src/assistant.rs"