[package]
name = "ai-assisatant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
azure_ai = []
load_font = []

[dependencies]

async-openai = {version = "0.17"}
#chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"
tokio = { version = "1.35", features=["fs", "process"]}



iced = {git = "https://github.com/iced-rs/iced", rev = "2f289af93c0bfef51698e1aca50696aef1cc6ecc", features = ["debug", "image", "tokio"]}
reqwest = { version = "0.11", features = ["json"]}
winit = { git = "https://github.com/iced-rs/winit.git", default-features = false }


rfd = "0.12"

log = "0.4"
env_logger = "0.11"
#ependencies with template engines
#askama = "0.12"  # 376
#liquid = "0.26" # 397
#tera = "1.11" # 410
handlebars = "3.0" # 383





[[bin]]
name = "assistant"
path = "src/assistant.rs"
